--- a/contracts/dojo_dev.toml
+++ b/contracts/dojo_dev.toml
@@ -13,7 +13,7 @@ github = "https://github.com/dojoengine/dojo-starter"
 telegram = "https://t.me/dojoengine"
 
 [namespace]
-default = "dojo_starter"
+default = "ok"
 
 [env]
 rpc_url = "http://localhost:5050/"
