--- a/client/package.json
+++ b/client/package.json
@@ -1,46 +1,33 @@
 {
-  "name": "camini",
-  "private": false,
-  "version": "0.0.1",
+  "name": "svelte-starter",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
     "preview": "vite preview",
-    "create-components": "npx /Users/os/Documents/code/dojo/dojo.js/packages/core/bin/generateComponents.cjs ../../dojo-starter/manifests/dev/deployment/manifest.json src/dojo/generated/contractComponents.ts http://localhost:5050 0x3fc79ccfd72c1450d2ccb73c5c521a7ec68b6c6af0caf96a0f1c39ce58876c8"
-  },
-  "dependencies": {
-    "@dojoengine/core": "1.0.0-alpha.5",
-    "@dojoengine/create-burner": "1.0.0-alpha.5",
-    "@dojoengine/react": "1.0.0-alpha.5",
-    "@dojoengine/recs": "2.0.13",
-    "@dojoengine/state": "1.0.0-alpha.5",
-    "@dojoengine/torii-client": "1.0.0-alpha.5",
-    "@dojoengine/utils": "1.0.0-alpha.5",
-    "@latticexyz/react": "^2.0.12",
-    "@latticexyz/utils": "^2.0.12",
-    "ethers": "^5.7.2",
-    "mobx": "^6.9.0",
-    "proxy-deep": "^3.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rxjs": "^7.8.1",
-    "starknet": "6.11.0",
-    "vite-plugin-top-level-await": "^1.3.1",
-    "vite-plugin-wasm": "^3.2.2"
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.5.4",
-    "vite": "^4.3.9"
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tsconfig/svelte": "^5.0.4",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.5",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@dojoengine/core": "1.0.0-alpha.12",
+    "@dojoengine/create-burner": "1.0.0-alpha.12",
+    "@dojoengine/recs": "^2.0.13",
+    "@dojoengine/state": "1.0.0-alpha.12",
+    "@dojoengine/torii-client": "1.0.0-alpha.12",
+    "@dojoengine/utils": "1.0.0-alpha.12",
+    "@latticexyz/utils": "^2.1.1",
+    "starknet": "^6.11.0",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
